--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,36 +1,25 @@
+
+html{overflow-y: scroll;}
+
 body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     margin: 0px;
-    height: 100vh;
+    height: 1600px;
 }
 
-.header, .footer{
+#header, #footer{
     background-color: #1F2937;
 }
 
-.header{
+#header{
     display: flex;
     flex-direction: column;
-    flex: 1 1 0;
-    box-sizing: border-box;
-    padding: 0 200px;
-}
-
-.content{
-    display: flex;
-    flex-direction: column;
-    flex: 2 1 0;
-}
-
-.footer{
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70px;
+    flex: 0 0 0;
+    height: fit-content;
+    padding: 0 300px;
 }
 
 .header-logo{
@@ -42,7 +31,7 @@ body{
     color: #F9FAF8;
 }
 
-.header ul{
+#header ul{
     display: inline-flex;
     padding-inline-start: 0px;
     list-style-type: none;
@@ -66,6 +55,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     flex: 1 1 0;
+    gap: 20px;
 }
 
 .hero-text{
@@ -99,4 +89,126 @@ body{
 
     color: white;
     background-color: #b8b9bb;
+}
+
+#content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1 1 0;
+
+    /*padding: 50px 300px 75px;*/
+}
+
+#content-top{
+    padding: 50px 300px 0px;
+}
+
+#content-header-text{
+    display: flex;
+    justify-content: center;
+
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    margin-bottom: 50px;
+}
+
+#content-subheader{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    min-width: 400px;
+    gap: 30px;
+}
+
+.illustration{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 0 1 0;
+
+    font-size: 18px;
+    color: #4a4b4d;
+    text-align: center;
+}
+
+.illustration img{
+    height: 150px;
+    width: 150px;
+    box-sizing: border-box;
+    border: 5px solid #3882F6;
+    border-radius: 5px;
+}
+
+#content-middle{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+
+    padding: 0px 300px 0px;
+    background-color: #e5e7eB;
+    height: 300px;
+}
+
+.quote-text{
+    align-self: flex-start;
+    font-size: 36px;
+}
+
+.quote-reference{
+    align-self:flex-end;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.content-bottom{
+    display: flex;
+    justify-content: space-between;
+    flex: 0 1 0;
+
+    width: 1300px;
+    min-width: fit-content;
+    padding: 40px 80px;
+    margin: 70px 300px 70px; 
+    background-color: #3882F6;
+    border-radius: 10px;
+}
+
+.call-to-action-left{
+    display: flex;
+    flex-direction: column;
+}
+
+.call-to-action-left-top{
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+}
+
+.call-to-action-left-bottom{
+    color: white;
+}
+
+.call-to-action-button{
+    align-self: flex-end;
+}
+
+.call-to-action-button button{
+    border: 3px solid white;
+    background-color: #3882F6;
+    color: white;
+    padding: 7px 25px;
+    border-radius: 5px;
+}
+
+#footer{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
 }
